--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="index-mobile.css">
+
+    <link rel="icon" href="./img/favicon.ico">
 </head>
 <body>
     <div class="header">
