feat: :lipstick: Change: main text content, skills content

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="navbar">
                 <div class="header-left">
                     <img class="header-logo" src="./img/header-logo.png" alt="header logo">
-                    <p>Yves Casio</p>
+                    <p>YVES CASIO, FULL-STACK WEB DEVELOPER</p>
                 </div>
     
                 <ul>
@@ -35,12 +35,11 @@
                     <p>
                         If you visited this page, This is the first working page that I've ever created on my web developing journey.
                         A path to work hard. I know that there will be many challenges and problems that I will encounter in the future,
-                        I may struggle, cry, or even lose my mind. One thing I assure you is that this webpage is only the beginning of my
-                        Web Developing progress. (The image on the right are my girlfriend's dog and they are adorable.)
+                        I may struggle, cry, or even lose my mind.
                     </p>
                 </div>
     
-                <img class="dogs-photo" src="./img/cloud&cotton.png" alt="Two cute dogs">
+                <img class="yves-photo" src="./img/picture_ko.jpg" alt="My Face">
             </div>
         </div>
 
@@ -52,36 +51,36 @@
             <div class="spacer-c"></div>
 
             <div class="inside-c">
-                <h1>Different albums for different moods.</h1>
+                <h1>TECHNICAL SKILLS</h1>
 
                 <div class="albums">
                     <div class="album">
-                        <a href="https://open.spotify.com/album/1c9Sx7XdXuMptGyfCB6hHs?si=PB5FkRJLSu6OY-39-nmTlw" target="_blank">
-                            <img src="./img/After_Laughter_Paramore_album_cover.png" alt="After Laughter - Paramore album cover">
+                        <a href="" target="_blank">
+                            <img src="./img/html5.png" alt="After Laughter - Paramore album cover">
                         </a>
 
-                        <p><b>After Laughter - Paramore</b>, when you're feeling pessimistic about life.</p>
+                        <p><b>HTML5</b> - Front-end structuring of DOM.</p>
                     </div>
                     <div class="album">
-                        <a href="https://open.spotify.com/album/4Io5vWtmV1rFj4yirKb4y4?si=mQ3ju0cCSSOZVOr6l4we3Q" target="_blank">
-                            <img src="./img/RageAgainsttheMachineRageAgainsttheMachine.jpg" alt="Rage Against the Machine - RATM album cover">
+                        <a href="" target="_blank">
+                            <img src="./img/css3.jpg" alt="Rage Against the Machine - RATM album cover">
                         </a>
 
-                        <p><b>Rage Against the Machine - RATM</b>, when you're rebellious to the world.</p>
+                        <p><b>CSS3</b> - Front-end designing.</p>
                     </div>
                     <div class="album">
-                        <a href="https://open.spotify.com/album/3Z62dgkhjWCfLeZ8v9p2Td?si=3LcWjq89QUCfJoyf6ACj0g" target="_blank">
-                            <img src="./img/DreamlandFNL.jpg" alt="Dreamland - COIN album cover">
+                        <a href="" target="_blank">
+                            <img src="./img/javascript.png" alt="Dreamland - COIN album cover">
                         </a>
 
-                        <p><b>Dreamland - COIN</b>, when you're driving down the road.</p>
+                        <p><b>JavaScript</b> - Back-end developing for manipulating events and the DOM.</p>
                     </div>
                     <div class="album">
-                        <a href="https://open.spotify.com/album/2Zi7uv234eNZJfLPGUIkSD?si=AMWcz9fxTnmQwsWMH3eJsg" target="_blank">
-                            <img src="./img/Lake_Street_Dive_-_Obviously.png" alt="Obviously - Lake Street Dive album cover">
+                        <a href="" target="_blank">
+                            <img src="./img/python-programming-language.png" alt="Obviously - Lake Street Dive album cover">
                         </a>
 
-                        <p><b>Obviously - Lake Street Dive</b>, when you're walking home after an exhausting day.</p>
+                        <p><b>Python</b>, My general purpose high-level programming language.</p>
                     </div>  
                 </div>
             </div>
