fix: :adhesive_bandage: Fix: LinkedIn link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul>
                     <li><a href="https://github.com/yvesaur" target="_blank">Github</a></li>
                     <li><a href="https://www.instagram.com/__yvezz/" target="_blank">Social</a></li>
-                    <li><a href="https://www.linkedin.com/in/yves-casio-b48245239/" target="_blank">LinkedIn</a></li>
+                    <li><a href="https://ph.linkedin.com/in/yves-casio-b48245239?original_referer=https%3A%2F%2Fwww.google.com%2F" target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
     
