chore: :lipstick: Change: Introduction text content

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
     
             <div class="header-content">
                 <div class="information">
-                    <h1>Hi.</h1>
+                    <h1>Hi</h1>
                     <p>
-                        If you visited this page, This is the first working page that I've ever created on my web developing journey.
-                        A path to work hard. I know that there will be many challenges and problems that I will encounter in the future,
-                        I may struggle, cry, or even lose my mind.
+                        welcome to my web development portfolio! My name is Yves Christian P. Casio, and I am a skilled web developer with expertise in HTML, CSS, JavaScript, 
+                        and Python. Over the years, I have gained hands-on experience in creating dynamic and interactive web applications that deliver seamless user experiences. 
+                        In this portfolio, you will find some of my best work that showcases my proficiency in web development and my ability to turn clients' ideas into reality. 
+                        Take a look around, and feel free to contact me if you have any questions or would like to discuss your web development project.
                     </p>
                 </div>
     
